@@ -1,3 +1,7 @@
+2007-11-13  Sanel <karijes@users.sourceforge.net>
+
+	* Removed old sort() code from list, replacing with new (faster) one
+
 2007-11-11  Sanel <karijes@users.sourceforge.net>
 
 	* In list added sort() method, with tests
